--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
 asgiref==3.3.4
+astroid==2.5.6
+atomicwrites==1.4.0
+attrs==20.3.0
 colorama==0.4.4
 coverage==5.5
 Django==3.2
-mysqlclient==2.0.3
+iniconfig==1.1.1
+isort==5.8.0
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+packaging==20.9
+pluggy==0.13.1
+py==1.10.0
+pylint==2.8.2
+pyparsing==2.4.7
+pytest==6.2.3
 pytz==2021.1
 sqlparse==0.4.1
+toml==0.10.2
+wrapt==1.12.1
