--- a/.github/workflows/Lint.yml
+++ b/.github/workflows/Lint.yml
@@ -25,5 +25,6 @@ jobs:
       - name: Run linters
         uses: wearerequired/lint-action@v1
         with:
-          black: true
+          continue_on_error: false
+          # black: true
           flake8: true
