fixing lint failures

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
+appdirs==1.4.4
 asgiref==3.3.4
 astroid==2.5.6
 atomicwrites==1.4.0
 attrs==20.3.0
 colorama==0.4.4
 coverage==5.5
+distlib==0.3.1
 Django==3.2
+filelock==3.0.12
 iniconfig==1.1.1
 isort==5.8.0
 lazy-object-proxy==1.6.0
@@ -16,6 +19,9 @@ pylint==2.8.2
 pyparsing==2.4.7
 pytest==6.2.3
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
 toml==0.10.2
+tox==3.23.1
+virtualenv==20.4.6
 wrapt==1.12.1
