--- a/.github/workflows/Lint.yml
+++ b/.github/workflows/Lint.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run linters
         uses: wearerequired/lint-action@v1
         with:
-          continue_on_error: false
+          continue_on_error: true
           flake8: true
           # E501: line too long (> 79 characters)
           flake8_args: "--max-line-length=127"
