--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ coverage==5.5
 distlib==0.3.1
 Django==3.2
 filelock==3.0.12
+flake8==3.9.2
 iniconfig==1.1.1
 isort==5.8.0
 lazy-object-proxy==1.6.0
@@ -15,6 +16,8 @@ mccabe==0.6.1
 packaging==20.9
 pluggy==0.13.1
 py==1.10.0
+pycodestyle==2.7.0
+pyflakes==2.3.1
 pylint==2.8.2
 pyparsing==2.4.7
 pytest==6.2.3
