--- a/.github/workflows/tdd-django.yml
+++ b/.github/workflows/tdd-django.yml
@@ -15,7 +15,7 @@ jobs:
 
     steps:
     - name: Check out Git repository
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
 
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
@@ -26,6 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
     - name: Run Tests
       run: |
         python manage.py test
