--- a/requirements.txt
+++ b/requirements.txt
@@ -27,10 +27,12 @@ pylint==2.8.2
 pyparsing==2.4.7
 pytest==6.2.3
 pytz==2021.1
+selenium==3.141.0
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
 toml==0.10.2
 tox==3.23.1
+urllib3==1.26.5
 virtualenv==20.4.6
 wrapt==1.12.1
